# api/v1/models/categories.go
@@ -1,6 +1,6 @@
 package models
 
-type Category struct {
+type Categories struct {
 	CategoryID   int    `json:"category_id"`
 	CategoryName string `json:"category_name"`
 }
